--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
 }
 
 dependencies {
+    implementation 'jp.wasabeef:glide-transformations:3.3.0'
+    // If you want to use the GPU Filters
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
